2007-04-15  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Don't fetch window icons if they won't be displayed.

2007-04-14  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Set no relief.

2007-04-14  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Quick hack to replace the menu bar with a toggle button.  This
	isn't finished and leaks, but it works around the weird theme bug.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Use the scaling image widget.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/mb-applet-windowselector.png:
	Update with Sato icon.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Disable the code that changes the icon to reflect the current window.

2007-04-11  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (main):
	Name frame depending on orientation.

2007-04-10  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (main):
	Replace alignment with frame for padding.

2007-04-10  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (load_applet), (main):
	Fix indent.

2007-04-10  Matthew Allum  <mallum@openedhand.com>

	* applets/showdesktop/Makefile.am:
	Add desktop active image.

2007-04-10  Matthew Allum  <mallum@openedhand.com>

	* matchbox-panel/mb-panel.c: 
	Add some default padding to panel edges.

2007-04-09  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	(mb_panel_scaling_image_init),
	(mb_panel_scaling_image_set_property),
	(mb_panel_scaling_image_get_property), (reload_icon),
	(mb_panel_scaling_image_class_init):
	* matchbox-panel/mb-panel-scaling-image.h:
	Add 'orientation' property.
	(Instead of determining orientation using black magic)

	* applets/battery/battery.c: (mb_panel_applet_create):