@@ -1,3 +1,9 @@
+2007-04-17  Jorn Baayen  <jorn@openedhand.com>
+
+	* applets/windowselector/windowselector.c: (rebuild_menu),
+	(menu_hide_cb), (filter_func), (mb_panel_applet_create):
+	Fix indent ..
+
 2007-04-15  Ross Burton  <ross@openedhand.com>
 
 	* applets/windowselector/windowselector.c:
